[package]
name = "r2r_minimal_node"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
r2r = "0.6.5"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
