[package]
name = "r2r_minimal_node"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2021"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
# Handle API change while we wait for r2r = "0.8.5" to be released.
r2r = { git = "https://github.com/sequenceplanner/r2r" }
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
