[package]
name = "r2r_minimal_node"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2021"

[dependencies]
r2r = "0.9"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }

# Install launch files or configs to the share directory.
#[package.metadata.ros]
#install_to_share = ["launch"]
